    - remove "Other" category and move it into "System"
   (as per spec)
  * softwarecenter/db/database.py:
    - add prefix "pkg_fuzzy"
  * add .menu term "SCPkgnameWildcard" to support wildcard based
    pkgname searches
  * softwarecenter/view/catview.py:
    - fix parsing when inline translations are available in the xml
  * softwarecenter/view/catview.py:
    - fix tests

  [ Gary Lasker ]
  * softwarecenter/backend/channel.py:
    - add to reimplement channels as instances of a new SoftwareChannel
      class, supports fixing the issues below
  * softwarecenter/app.py,
    softwarecenter/view/viewswitcher.py,
    softwarecenter/view/channelpane.py:
    - enable Canonical partner channel repository view (LP: #530401)
    - fix crash when searching while in "Provided by Ubuntu"
      view (LP: #523781) 
    - show all software items in the "Provided by Ubuntu"
      view (LP: #528043)
    - enable maintenance filter in the "Provided by Ubuntu"
      view (LP: #528057)
    - fix navigation button text for the "Provided by Ubuntu"
      view (LP: #530398)

 -- Gary Lasker <gary.lasker@canonical.com>  Tue, 02 Mar 2010 18:05:58 -0500

software-center (1.1.15) lucid; urgency=low

  [ Michael Vogt ]
  * softwarecenter/view/widgets/animatedimage.py:
    - fix crash when image property is not set
  * updated po/th.po:
    - thanks to Sira Nokyoonhtong
  * data/featured.menu.in: updated, based on 
    https://lists.ubuntu.com/archives/ubuntu-desktop/2010-March/002448.html

  [ Gary Lasker ]
  * data/ui/SoftwareCenter.ui:
    - tweak default window width to restore four-column view
      in the categories screen (LP: #528082)
  * softwarecenter/view/channelpane.py:
    - make status bar text for individual channel views
      consistent with that in the "Get Software" section
      (LP: #528055)
  * softwarecenter/view/availablepane.py:
    - don't show search entry in app details view (LP: #528121)
    - fix missing status text at startup (LP: #528040) 