@@ -261,6 +261,12 @@ class ViewSwitcherList(gtk.TreeStore):
                                                       channel_name,
                                                       channel_origin,
                                                       None))
+        # FIXME: do not hardcode this, check instead for 
+        #        self.db.xapiandb.allterms("AH") and add all of those
+        #        and provide a mechanism in the channel to check
+        #        both origin (XAO) and channel name from app-install (AH)
+        # FIXME2: pass the AH name as well so that we do not need to special
+        #         case the AH query for partner
         # also get the partner repository
         partner_channel = SoftwareChannel(self.icons, 
                                           distro_channel_name,
